--- a/partials/index.html
+++ b/partials/index.html
@@ -1,6 +1,8 @@
 <h2>{{title}}</h2>
 <div>
   <div ng-repeat="item in productList">
-    {{item}}
+    <h3><a href="{{item.id}}">{{item.title}}</a></h3>
+    <p>{{item.description}}</p>
+    <p>{{item.url}}</p>
   </div>
 </div>
