--- a/partials/register.html
+++ b/partials/register.html
@@ -19,6 +19,12 @@
       <input type="radio" name="wanted" value="runner" />運営
     </p>
     <p>
+      チーム名:
+    </p>
+    <p>
+      メンバー:
+    </p>
+    <p>
       <input type="button" value="登録" />
     </p>
   </form>
